--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "description": "",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
+    "graphql-http": "^1.22.1",
     "node-cron": "^3.0.3",
     "speedtest-net": "^2.2.0"
   }
