--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@graphql-yoga/node": "^3.9.1",
     "@influxdata/influxdb-client": "^1.33.2",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "graphql": "^16.8.1",
-    "graphql-http": "^1.22.1",
     "node-cron": "^3.0.3",
     "speedtest-net": "^2.2.0"
+  },
+  "engines": {
+    "node": ">=16.17.0"
   }
 }
