inprogress: fix for speedtest-net error when running in container

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,12 @@
-FROM node:16
-#ENV NODE_ENV=production
-WORKDIR /usr/src/app
-COPY ["package*.json", "./"]
-#RUN npm install --production --silent && mv node_modules ../
+FROM node:18-buster
+
+WORKDIR /app
+COPY ["package*.json", "/app"]
 RUN npm install
-COPY . .
-EXPOSE 4000
-RUN chown -R node /usr/src/app
-#USER node
-CMD ["npm", "start"]
+COPY . /app
+
+EXPOSE 4040
+
+#CMD ["npm", "start"]
+# command to run src/run-speedtest.js on start
+CMD ["node", "src/run-speedtest.js"]
