swapped speedtest-net module for ookla's speedtest CLI

--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,21 @@
 {
   "name": "speedtest-tracker-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "run-speedtest": "node src/run-speedtest.js"
+    "start": "node src/server.js"
   },
   "author": "",
   "license": "MIT",
-  "description": "Test and track your network speed over time",
+  "description": "Record and track your network speed over time",
   "dependencies": {
-    "@graphql-yoga/node": "^3.9.1",
     "@influxdata/influxdb-client": "^1.33.2",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "graphql": "^16.8.1",
-    "node-cron": "^3.0.3",
-    "speedtest-net": "^2.2.0"
+    "graphql-http": "^1.22.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.13.0"
   }
 }
