--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "winston": "^3.13.0"
   }
 }
