--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "NODE_ENV=development nodemon src/server.js",
-    "test": "mocha --exit",
+    "test": "nyc mocha --exit",
     "lint": "eslint ."
   },
   "author": "",
@@ -27,6 +27,16 @@
     "eslint": "^7.32.0",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.22",
+    "nyc": "^15.1.0",
     "sinon": "^11.1.2"
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "exclude": [
+      "**/test/**"
+    ]
   }
 }
