--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
